# sw_python

./: README.md  setup.cfg
aSi-sample/: final.data
aSi-sample/elastic_analytical/: analytic.py
aSi-sample/elastic_autograd/: autograd.py
sw_derivative/: sw.py  sw_deriv.py
