[metadata]
name = sw_derivative
version = 0.0
url = https://github.com/eminamitani/sw_derivative
author = Emi Minamitani
author_email = eminamitani@sanken.osaka-u.ac.jp
license = MIT
description = derivative of stillinger-weber potential 
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  ase
  numpy
  tqdm
  pyyaml
  torch 
